<resources>
    <string name="app_name">Myanmar Attraction</string>
    <string name="action_settings">Settings</string>
    <string name="left_menu_myanmar_attraction_palces">Myanmar Attractions Places</string>

    <string-array name="login_register">
        <item>Login</item>
        <item>Register</item>
    </string-array>

    <string name="attraction_list_detail_transition_name">attraction_list_detail_transition_name</string>
    <string name="action_share">Share</string>
    <string name="lbl_login">Login ၀င္ရန္</string>
    <string name="lbl_register">Register ျပဳလုုပ္ရန္</string>
    <string name="lbl_register_action">Register</string>
    <string name="lbl_logout">Logout</string>
    <string name="myanmar_attractions_recycler_view">ျမန္မာ့ အလွအပမ်ား (RecyclerView)</string>
    <string name="myanmar_attractions_list_view">ျမန္မာ့ အလွအပမ်ား (ListView)</string>
    <string name="myanmar_attractions_grid_view">ျမန္မာ့ အလွအပမ်ား (GridView)</string>
    <string name="lbl_registration_title"><![CDATA[<b> ျမန္မာ့ အလွ </b>တြင္ စိတ္ျကိုုက္ပါဝင္နိုုင္ရန္ ေအာက္ပါ တိုု့ကိုု ျဖည့္စြက္၍ Register ျပဳလုုပ္ပါ ။]]></string>
    <string name="lbl_login_title"><![CDATA[<b>လြန္ခဲ႔ေသာ ၃ ရက္အတြင္း ျမန္မာ႔ အလွ သုိ႔ Travel Destination ၇ ခု အသစ္ေရာက္ရွိလာပါသည ။]]></string>

    <string-array name="current_residing_country">
        <item>Myanmar</item>
        <item>Malaysia</item>
        <item>Singapore</item>
        <item>Thailand</item>
        <item>Japan</item>
        <item>Korea, Republic of</item>
        <item>Qatar</item>
        <item>United Arab Emirates</item>
        <item>United States</item>
    </string-array>

    <string name="msg_enter_name">မိတ္ေဆြရဲ့ အမည္</string>
    <string name="msg_enter_email">မိတ္ေဆြရဲ့ email</string>
    <string name="msg_enter_password_login">မိတ္ေဆြရဲ့  password</string>
    <string name="msg_enter_password_register">Password တစ္ခုု သတ္မွတ္ေပးပါ</string>
    <string name="msg_date_of_birth">မိတ္ေဆြ ရဲ့ ေမြးေန့</string>
    <string name="msg_select_your_current_residing_country">မိတ္ေဆြ လက္ရွိေနထိုုင္ေသာ Country အား ေရြးခ်ယ္ပါ</string>

    <string name="error_missing_name">Need to enter your name</string>
    <string name="error_missing_email">Need to enter your email address</string>
    <string name="error_missing_password">Need to put a password for Gita App</string>
    <string name="error_missing_date_of_birth">Need to select your date of birth.</string>
    <string name="error_email_is_not_valid">Your email doesn\'t seem valid. Please check.</string>

    <string name="confirm_yes">ေသခ်ာပါသည္</string>
    <string name="confirm_no">မျပဳလုပ္ေတာ့ပါ</string>
    <string name="confirm_ok">ေကာင္းပါျပီ</string>
    <string name="confirm_recover_password">Recover Password</string>
    <string name="confirm_try_again">Try Again</string>
    <string name="confirm_request_new_otp">Request New OTP</string>

    <string name="msg_welcome_new_user">အခုုလိုု က်ြန္ေတာ္တိုု့ ျမန္မာ့့ အလွ Mobile App ေလးမွာ Register လုုပ္တဲ့ အတြက္ ေက်းဇူးအမ်ားျကီးတင္ပါတယ္ ။ အခုုဆိုုရင္ မိတ္ေဆြစိတ္ျကိုုက္ Travel Destination မ်ားကိုု မွတ္သားနိုုင္ အသစ္ထပ္ထည့္နိုုင္ ေဝဖန္ အျကံျပဳနိုုင္ပါျပီ ။</string>
    <string name="msg_confirm_logout">ျမန္မာ့ အလွ Mobile App မွ Logout ျပဳလုုပ္ရန္ ေသခ်ာပါသလား</string>
    <string name="msg_forgot_password"><![CDATA[<u> Password ေမ႔သြားလုိ႔လား</u>]]></string>
    <string name="msg_to_do_register"><![CDATA[<u> Register မလုပ္ရေသးပါက ျပဳလုပ္ရန္</u>]]></string>
    <string name="lbl_login_action">Login</string>
    <string name="msg_dialog_login">Login. Please wait</string>
    <string name="msg_dialog_register">Registering. Please wait.</string>
    <string name="msg_welcom_login_user">Welcome Myanmar Attraction</string>

</resources>
